--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,16 @@ plugins {
 	id 'org.springframework.boot' version '2.4.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'war'
 }
 
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+bootWar {
+    archiveName("ROOT.war")
+}
 
 configurations {
 	compileOnly {
